<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/spa_name_text_view"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/spa_name"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintBaseline_toBaselineOf="@+id/spa_station_text_view"
                card_view:layout_constraintEnd_toStartOf="@+id/spa_station_text_view"
                 />

            <TextView
                android:id="@+id/spa_station_text_view"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/spa_station"
                card_view:layout_constraintStart_toEndOf="@+id/spa_name_text_view"
                card_view:layout_constraintEnd_toStartOf="@+id/spa_walk_text_view"
                card_view:layout_constraintTop_toTopOf="@+id/spa_walk_text_view"
                />

            <TextView
                android:id="@+id/spa_walk_text_view"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/spa_walk"
                card_view:layout_constraintStart_toEndOf="@+id/spa_station_text_view"
                card_view:layout_constraintBaseline_toBaselineOf="@+id/spa_time_text_view"
                card_view:layout_constraintEnd_toStartOf="@+id/spa_time_text_view"
                />

            <TextView
                android:id="@+id/spa_time_text_view"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/spa_time"
                card_view:layout_constraintStart_toEndOf="@+id/spa_walk_text_view"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                />


            <TextView
                android:id="@+id/spa_closing_day_text_view"
                android:layout_width="90sp"
                android:layout_height="wrap_content"
                android:text="@string/spa_closing_day"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/spa_name_text_view" />

            <TextView
                android:id="@+id/spa_cost1_text_view"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/spa_cost1"
                card_view:layout_constraintStart_toEndOf="@+id/spa_closing_day_text_view"
                card_view:layout_constraintTop_toBottomOf="@+id/spa_station_text_view" />

            <TextView
                android:id="@+id/spa_cost2_text_view"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/spa_cost1"
                card_view:layout_constraintStart_toEndOf="@+id/spa_cost1_text_view"
                card_view:layout_constraintTop_toBottomOf="@+id/spa_walk_text_view" />

            <TextView
                android:id="@+id/spa_note_text_view"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/spa_note"
                card_view:layout_constraintStart_toEndOf="@+id/spa_cost2_text_view"
                card_view:layout_constraintTop_toBottomOf="@+id/spa_time_text_view" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>