<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/spa_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:text="@string/spa_name"
                android:textSize="16sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/spa_station"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/spa_station"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:text="@string/spa_station"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/spa_name"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/spa_walk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:text="@string/spa_walk"
                android:textSize="16sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/spa_station"
                app:layout_constraintStart_toEndOf="@+id/spa_station" />

            <TextView
                android:id="@+id/spa_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:text="@string/spa_time"
                android:textSize="16sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/spa_walk"
                app:layout_constraintStart_toEndOf="@+id/spa_walk" />

            <TextView
                android:id="@+id/spa_closing_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:text="@string/spa_closing_day"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spa_name" />

            <TextView
                android:id="@+id/spa_cost1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:text="@string/spa_cost1"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/spa_closing_day"
                app:layout_constraintTop_toBottomOf="@+id/spa_station" />

            <TextView
                android:id="@+id/spa_cost2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/spa_cost2"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/spa_cost1"
                app:layout_constraintTop_toBottomOf="@+id/spa_walk" />

            <TextView
                android:id="@+id/spa_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/spa_note"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spa_closing_day" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spa_note" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>